Skia Graphics Release Notes

This file includes a list of high level updates for each milestone release.

* * *

Milestone 81

<Insert new notes here- top is most recent.>

Added BC1 compressed format support. Metal and Vulkan seem to only support the BC
formats on desktop machines.

Added compressed format support for backend texture creation API.
This adds the following new entry points:
  GrContext::compressedBackendFormat
  GrContext::createCompressedBackendTexture
The latter method comes in variants that allow color-initialized and
compressed texture data initialized.

* * *
  * Added SkMatrix::MakeTrans(SkIVector)
    https://review.skia.org/259804

Milestone 80

  * For Vulkan backend, we now require that the VkDevice, Queue, and Instance outlive
    either the destruction or abandoning of the GrContext. Additionally, all
    GrBackendTextures created via GrContext::createBackendTexture calls must be deleted
    before destroying or abandoning the GrContext.
    https://review.skia.org/257921

  * Removed SkSize& SkSize::operator=(const SkISize&)
    https://review.skia.org/257880

  * SkISize width() and height() now constexpr
    https://review.skia.org/257680

  * Added SkMatrix::MakeTrans(SkVector) and SkRect::makeOffset(SkVector).
    https://review.skia.org/255782

  * Added SkImageInfo::MakeA8(SkISize) and added optional color space parameter to
    SkImageInfo::MakeN32Premul(SkISize).

  * Added dimensions() and getFrameCount() to SkAnimatedImage
    https://review.skia.org/253542

  * Removed SkMatrix44 version of toXYZD50 from SkColorSpace. Switched to skcms types in
    transferFn, invTrasnferFn, and gamutTransformTo functions.
    https://review.skia.org/252596

  * Removed rotation and YUV support from SkColorMatrix
    https://review.skia.org/252188

  * Added kBT2020_SkYUVColorSpace. This is BT.2020's YCbCr conversion (non-constant-luminance).
    https://review.skia.org/252160

  * Remove old async read pixels APIs