@@ -16,8 +16,8 @@
 #include "src/core/SkSpecialSurface.h"
 #include "src/core/SkWriteBuffer.h"
 #if SK_SUPPORT_GPU
+#include "include/effects/SkRuntimeEffect.h"
 #include "include/private/GrRecordingContext.h"
-#include "src/core/SkRuntimeEffect.h"
 #include "src/gpu/GrClip.h"
 #include "src/gpu/GrColorSpaceXform.h"
 #include "src/gpu/GrRecordingContextPriv.h"
