@@ -11,6 +11,7 @@
 #include "include/core/SkColorFilter.h"
 #include "include/core/SkData.h"
 #include "include/core/SkPixelRef.h"
+#include "include/effects/SkRuntimeEffect.h"
 #include "include/gpu/GrContext.h"
 #include "include/gpu/GrTypes.h"
 #include "include/private/GrRecordingContext.h"
@@ -25,7 +26,6 @@
 #include "src/core/SkMipMap.h"
 #include "src/core/SkPaintPriv.h"
 #include "src/core/SkResourceCache.h"
-#include "src/core/SkRuntimeEffect.h"
 #include "src/core/SkTraceEvent.h"
 #include "src/gpu/GrBitmapTextureMaker.h"
 #include "src/gpu/GrCaps.h"
